--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       </div>
 
       <div class="mt-8 flex space-x-4">
-        <a href="/" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Accueil</a>
-        <a href="/admin" class="px-4 py-2 bg-gray-700 text-white rounded hover:bg-gray-800">Espace Admin</a>
+        <a href="#/" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Accueil</a>
+        <a href="#/admin" class="px-4 py-2 bg-gray-700 text-white rounded hover:bg-gray-800">Espace Admin</a>
       </div>
     </main>
   </body>
