--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Volley-Ball Babi</title>
-    <link rel="icon" type="image/png" href="/babi-volley/logo.png" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <link rel="icon" type="image/png" href="./logo.png" />
   </head>
-  <body class="bg-gray-100 text-gray-900">
+  <body class="bg-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
